src/main/java/org/example/rippleback/core/error/exceptions/common/NotFoundException.java
package org.example.rippleback.core.error.exceptions.common;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}
